bug 305505: better visibility of links

--- a/planet/output/css/main/new.css
+++ b/planet/output/css/main/new.css
@@ -2,20 +2,20 @@
 		width:100%;
 		margin:0px;
 		padding:0px;
-		
+
 	}
 	body, td { color: #555;	font-family: Arial, Helvetica, sans-serif; font-size: .75em; }
 	* { margin:0; padding:0;}
-	
+
 	img { border:0px;}
-	
-	pre, code {	
-		font-family: "Courier New", Courier, monospace; 
-		color: #444; 
+
+	pre, code {
+		font-family: "Courier New", Courier, monospace;
+		color: #444;
 		background: #f0f0f4;
 	}
 	pre {
-		display:block;	
+		display:block;
 		overflow: auto;
 		margin: 0 0 1em 1em;
 		padding: 0.5em;
@@ -23,17 +23,17 @@
 		border-left: 8px #ccd solid;
 	}
 	p { margin: 0 0 1em 0; }
-		
+
 	strong,b { font-weight: bold; }
 	em,i { font-style:italic; }
 	li { line-height:1.5em; margin-left:1.5em;}
 	h1 { color: #222; font-size: 1.8em;}
-	
+
 	a img {	border: 0px; }
 	a {color: #06c; text-decoration:none;}
-	a:hover {color: #666; text-decoration:underline;}
-	a:focus {color: #666; text-decoration:underline;}	
-	a:visited {color: #666;}	
+	a:hover {text-decoration:underline;}
+	a:focus {text-decoration:underline;}
+	/* (see bug 305505) a:visited {color: #666;}*/
 
 	#body {
 	padding:10px;
@@ -48,10 +48,10 @@
 	top:150px;
 	width:210px;
 	}
-	
+
 	/* footer */
 	#footer { color:#888; background:#fff; margin: 0 1em; padding: 1em 0; border-top: 1px #ddd solid; line-height: 2em;}
-	
+
 	/* header */
 	#header { background:#FFFFFF url(../../images/header_bg.jpg) repeat-x scroll 0%; height:70px; margin:0px; padding:0px; position:relative;}
 	#header-graphic { height:68px; left:0pt; position:absolute; top:0pt; }
@@ -118,10 +118,10 @@
 
 	td.person-info {float: left;position: relative;	left: 4px;	margin-top: 25px !important;padding: 0 20px 30px 0;	width: 120px;vertical-align:top; font-size: 1.5em; text-align: center;}
 	td.person-info a { text-decoration: none; color: #666; font-size:0.75em; }
-	
+
 	td.homeitem { border-bottom: 1px dotted #000; margin: 10px 0 10px 1%; padding-bottom: 10px; }
 	td.homeitem h3 { background: url("../../images/leftcol_sideitem_bg.gif") repeat-x top left; padding-left: 5px; font-size:1.5em;}
-		
+
 
 	div.post-contents {	padding: 1em 25px 0 25px; margin-right: 10px; }
 	div.post-contents img { nowrap }:
@@ -131,5 +131,5 @@
 	div.post-footer div { text-align: right; color: #999; font-size: .95em; }
 	div.post-footer div a { text-decoration: none; color: #999; }
 	div.post-footer div a:hover { color: inherit; text-decoration: underline; }
-	
-	
+
+
